--- a/AuthorBlazor/Pages/_Host.cshtml
+++ b/AuthorBlazor/Pages/_Host.cshtml
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@using WebApplication1
 @namespace WebApplication1.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
@@ -14,10 +15,10 @@
     <base href="~/"/>
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"/>
     <link href="css/site.css" rel="stylesheet"/>
-    <link href="WebApplication1.styles.css" rel="stylesheet"/>
+    <link href="AuthorBlazor.styles.css" rel="stylesheet"/>
 </head>
 <body>
-<component type="typeof(App)" render-mode="ServerPrerendered"/>
+<component type="typeof(App)" render-mode="Server"/>
 
 <div id="blazor-error-ui">
     <environment include="Staging,Production">
